--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game</title>
     <style>
-        /* 스타일 설정 */
+        /* 스타일 설정이지롱~ */
         body {
             display: flex;
             justify-content: center;
